# Photon

./: .env.example  .gitignore  LICENSE  README.md  main.py  package-lock.json  package.json  projectspec_v2.md  pyproject.toml  requirements.txt  tailwind.config.js
docker/: Dockerfile  docker-compose.yml
project_documentation/: API_REFERENCE.md  ARCHITECTURE.md  CODING_STYLE.md  DECISIONS.md  DESIGN.md  PLAN.md
src/backend/: app.py  config.py  wsgi.py
src/backend/api/: chat_routes.py  download_routes.py  example_routes.py  llm_routes.py  manual_routes.py  shared_routes.py  upload_routes.py  window_routes.py
src/backend/core/image/: composite.py  metadata.py  thumbnail.py
src/backend/core/llm/: client.py  prompts.py  schema.py
src/backend/core/sandbox/: base.py  docker_executor.py  subprocess_executor.py
src/backend/core/session/: manager.py  store.py
src/backend/examples/: example_code.py
src/backend/models/: dto.py
src/backend/utils/: slugify.py  validation.py
src/frontend/static/css/: input.css  markdown.css  output.css
src/frontend/static/js/: chat.js  codeDialog.js  codeEditor.js  downloadDialog.js  imageViewer.js  markdownRenderer.js  shareDialog.js  uploader.js  windowManager.js
src/frontend/templates/: base.html  index.html  shared_window.html
src/frontend/templates/partials/: chat_pane.html  code_dialog.html  code_editor_pane.html  download_dialog.html  image_compare.html  metadata_block.html  share_dialog.html  upload_panel.html  window_tab.html
