[project]
name = "featureexplorer"
version = "0.1.0"
description = "LLM-Driven Image Feature/Transformation Visualizer — Flask + Gemini/OpenAI + sandboxed code execution"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.3",
    "google-genai>=1.0.0",
    "gunicorn>=26.0.0",
    "numpy>=2.5.1",
    "openai>=1.30.0",
    "opencv-python-headless>=5.0.0.93",
    "pillow>=12.3.0",
    "pydantic>=2.6.0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "scikit-image>=0.26.0",
    "tifffile>=2026.6.1",
]

[tool.pyright]
include = ["src"]
extraPaths = ["."]
executionEnvironments = [
  { root = "." }
]
